[gd_scene load_steps=11 format=3 uid="uid://qbxuwuxw36be"]

[ext_resource type="Script" path="res://scripts/drone.gd" id="1_cmnuc"]
[ext_resource type="Texture2D" uid="uid://bwaiiu0lw12gt" path="res://sprites/game/Drone.png" id="2_r6mlo"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_psqdy"]
light_mode = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_05mhg"]
radius = 7.16667
height = 23.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6eqj8"]
radius = 9.0
height = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q8yn4"]
radius = 9.33333

[sub_resource type="Animation" id="Animation_u16p6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_whqfq"]
resource_name = "swayLeft"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [0.383972, -0.383972, 0.383972, 0.0]
}

[sub_resource type="Animation" id="Animation_dit3g"]
resource_name = "swayRight"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [-0.383972, 0.383972, -0.383972, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqufd"]
_data = {
"RESET": SubResource("Animation_u16p6"),
"swayLeft": SubResource("Animation_whqfq"),
"swayRight": SubResource("Animation_dit3g")
}

[node name="Drone" type="Node2D"]
light_mask = 3
z_index = -1
texture_filter = 1
material = SubResource("CanvasItemMaterial_psqdy")
position = Vector2(0, 18)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_cmnuc")

[node name="Drone" type="Sprite2D" parent="."]
light_mask = 3
use_parent_material = true
position = Vector2(0, -17.3333)
texture = ExtResource("2_r6mlo")
offset = Vector2(0, 31.3333)

[node name="Eat" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/Eat"]
position = Vector2(0, 22.1667)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_05mhg")

[node name="PancakeFall" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/PancakeFall"]
position = Vector2(0, 23.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6eqj8")

[node name="ParachuteFall" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/ParachuteFall"]
position = Vector2(0, 10.6666)
shape = SubResource("CircleShape2D_q8yn4")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xqufd")
}

[connection signal="area_entered" from="Drone/Eat" to="." method="_on_eat_area_entered"]
[connection signal="area_entered" from="Drone/PancakeFall" to="." method="_on_pancake_fall_area_entered"]
[connection signal="area_entered" from="Drone/ParachuteFall" to="." method="_on_parachute_fall_area_entered"]
